tests/syntax_errors/missing_semi.snl
program missingSemi
var integer x
begin
    write(x)
end.
